# ragbox

./: .env.example  .gitignore  Dockerfile  pyproject.toml
src/: models.py  rag.py  server.py  settings.py  utils.py
