[project]
name = "ragbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.2.0",
    "einops>=0.8.1",
    "fastapi>=0.116.1",
    "lancedb>=0.24.2",
    "langchain-text-splitters>=0.3.9",
    "litellm>=1.74.12",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.0.0",
    "uvicorn>=0.35.0",
]
